[package]
name = "nipaw_core"
version = "1.9.2"
description = "一个git平台的api封装库，core实现"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true

url = "=2.5.8"
