[package]
name = "nipaw_github"
version = "0.12.1"
description = "Github provider for nipaw_core"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
http.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

nipaw_core = { path = "../nipaw_core", version = "0.11.1" }

scraper = "=0.25.0"


