[package]
name = "nipaw_node"
version = "1.8.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false


[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "=3.6.0", features = ["chrono_date", "async"] }
napi-derive = "=3.4.0"
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true

nipaw_core = { path = "../nipaw_core" }
nipaw_github = { path = "../nipaw_github" }
nipaw_gitee = { path = "../nipaw_gitee" }
nipaw_gitcode = { path = "../nipaw_gitcode" }
nipaw_cnb = { path = "../nipaw_cnb" }
paste = "=1.0.15"


[build-dependencies]
napi-build = "=2.3.1"

